update demo links

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
                     <nav role="navigation" class="nav-menu w-nav-menu">
                         <div class="nav-link">
                             <div class="nav-link-active-holder">
-                                <a href="https://ecosis.network/#about" class="nav-link-holder w-inline-block keychainify-checked">
+                                <a href="https://demo.ecosis.network/#about" class="nav-link-holder w-inline-block keychainify-checked">
                                     <div class="nav-link-text-holder"><div class="nav-link-text">About</div></div>
                                 </a>
-                                <a href="https://ecosis.network/#about" class="cricle-active-holder w-inline-block keychainify-checked"></a>
+                                <a href="https://demo.ecosis.network/#about" class="cricle-active-holder w-inline-block keychainify-checked"></a>
                             </div>
                             <div class="nav-link-active-holder">
-                                <a href="https://ecosis.network/#integration" class="nav-link-holder w-inline-block keychainify-checked">
+                                <a href="https://demo.ecosis.network/#integration" class="nav-link-holder w-inline-block keychainify-checked">
                                     <div class="nav-link-text-holder"><div class="nav-link-text">Integration</div></div>
                                 </a>
-                                <a href="https://ecosis.network/#integration" class="cricle-active-holder w-inline-block keychainify-checked"></a>
+                                <a href="https://demo.ecosis.network/#integration" class="cricle-active-holder w-inline-block keychainify-checked"></a>
                             </div>
                             <div class="nav-link-active-holder">
-                                <a href="https://ecosis.network/#features" class="nav-link-holder w-inline-block keychainify-checked">
+                                <a href="https://demo.ecosis.network/#features" class="nav-link-holder w-inline-block keychainify-checked">
                                     <div class="nav-link-text-holder"><div class="nav-link-text">Features</div></div>
                                 </a>
-                                <a href="https://ecosis.network/#features" class="cricle-active-holder w-inline-block keychainify-checked"></a>
+                                <a href="https://demo.ecosis.network/#features" class="cricle-active-holder w-inline-block keychainify-checked"></a>
                             </div>
                         </div>
                         <div class="nav-button-holder"><a href="https://az-black.webflow.io/#earlyAccess" class="button navbar-button w-button keychainify-checked">Get early access</a></div>
