--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <link rel="stylesheet" href="assets/css.css" media="all" />
         <script type="text/javascript">
             WebFont.load({ google: { families: ["Manrope:200,300,regular,500,600,700,800", "Inter:200,300,regular,500,600"] } });
-            const stream = document.getElementsByClassName('w-webflow-badge keychainify-checked')[0];
+            const stream = document.getElementsByClassName('w-webflow-badge')[0];
             stream.style.visibility = 'hidden';
         </script>
         <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
@@ -1040,7 +1040,7 @@
                 <div class="footer-flex-container">
                     <div class="footer-brand-content">
                         <a href="https://ecosis.network" data-w-id="a91eae88-2cd2-a6a2-03b1-a73f4b02afe9" aria-current="page" class="footer-logo-link w-inline-block w--current keychainify-checked" style="opacity: 1;">
-                            <img src="assets/ecosis_v2_120w.png" class="footer-image" />
+                            <img src="assets/ecosis_v2_120w_dark.png" class="footer-image" />
                         </a>
                         <!-- <ul role="list" class="footer-list w-list-unstyled">
                             <li class="footer-list-item" style="opacity: 1;">
