--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="500" data-doc-height="1">
             <div class="container nav-container">
                 <div class="nav-menu-container" style="opacity: 1;">
-                    <a href="https://az-black.webflow.io/" aria-current="page" class="brand w-nav-brand w--current keychainify-checked" aria-label="home">
+                    <a href="https://demo.ecosis.network/" aria-current="page" class="brand w-nav-brand w--current keychainify-checked" aria-label="home">
                         <img src="assets/ecosis_v2_120w.png" loading="lazy" alt="" class="brand-image" />
                     </a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
@@ -91,7 +91,7 @@
                                 <a href="https://demo.ecosis.network/#features" class="cricle-active-holder w-inline-block keychainify-checked"></a>
                             </div>
                         </div>
-                        <div class="nav-button-holder"><a href="https://az-black.webflow.io/#earlyAccess" class="button navbar-button w-button keychainify-checked">Get early access</a></div>
+                        <div class="nav-button-holder"><a href="https://demo.ecosis.network/#earlyAccess" class="button navbar-button w-button keychainify-checked">Get early access</a></div>
                     </nav>
                     <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false">
                         <div class="center-box"><img src="assets/63aee5793ca698aa19fe7f75_menu.svg" loading="lazy" alt="" /></div>
