--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
         <link rel="stylesheet" href="assets/css.css" media="all" />
         <script type="text/javascript">
             WebFont.load({ google: { families: ["Manrope:200,300,regular,500,600,700,800", "Inter:200,300,regular,500,600"] } });
-            const stream = document.getElementsByClassName('w-webflow-badge')[0];
-            stream.style.visibility = 'hidden';
+            const boxes = Array.from(document.getElementsByClassName('w-webflow-badge'));
+
+            boxes.forEach(box => {
+              box.remove();
+            });
         </script>
         <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
         <script type="text/javascript">
