--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                             </div>
                             <div class="trusted-item">
                                 <div class="trusted-item-header" style="opacity: 1;">
-                                    <h2 class="trusted-no">80%+</h2>
+                                    <h2 class="trusted-no">80%</h2>
                                     <div class="card-title"><strong>operational costs saving</strong></div>
                                 </div>
                                 <div class="fade-in-on-scroll" style="opacity: 1;">
