--- a/index.html
+++ b/index.html
@@ -567,10 +567,10 @@
                     ></div>
                     <div class="workflow-section">
                         <div class="fade-in-move-on-scroll" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;">
-                            <div class="card-title">Integrates with your workflow</div>
+                            <div class="card-title">Nomics Virtual Machine</div>
                         </div>
                         <div class="fade-in-move-on-scroll" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;">
-                            <div class="experience-paragraph-holder"><p>Enhance your daily finance and business operations easily within few clicks.</p></div>
+                            <div class="experience-paragraph-holder"><p>Develop smart contracts with Typescript and access the inbuilt AI and combine the system with the most powerful third-party platforms on the web.</p></div>
                         </div>
                         <div class="line" style="will-change: width, height; width: 0%;"></div>
                     </div>
@@ -606,7 +606,7 @@
                             <div class="trusted-item">
                                 <div class="trusted-item-header" style="opacity: 1;">
                                     <h2 class="trusted-no">80%</h2>
-                                    <div class="card-title"><strong>operational costs saving</strong></div>
+                                    <div class="card-title"><strong>costs saving</strong></div>
                                 </div>
                                 <div class="fade-in-on-scroll" style="opacity: 1;">
                                     <p>The deposit token system wraps funds in such a smart way, so it can save most of the third-party operation costs.</p>
