--- a/index.html
+++ b/index.html
@@ -623,11 +623,11 @@
                             </div>
                             <div class="trusted-item last">
                                 <div class="trusted-item-header" style="opacity: 1;">
-                                    <h2 class="trusted-no">GPT-J</h2>
+                                    <h2 class="trusted-no">ecoGPT</h2>
                                     <div class="card-title"><strong>LLM</strong></div>
                                 </div>
                                 <div class="fade-in-on-scroll" style="opacity: 1;">
-                                    <p>The AI is based on its dedicated inbuilt GPT4 to democratise Large Language Models and make them accessible to everyone.</p>
+                                    <p>The AI is based on its dedicated and customised inbuilt GPT-J to democratise Large Language Models and make them accessible to everyone.</p>
                                 </div>
                             </div>
                         </div>
