--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                             <div class="content-sticky">
                                 <div class="fade-in-on-scroll" style="opacity: 1;"><h1 class="title smaller">Designed to fullfil your dreams</h1></div>
                                 <div class="fade-in-on-scroll" style="opacity: 1;">
-                                    <p>The AI-empowered dedicated blockchain system encourages financial growth. Through community ownership and smart asset management, it consistently support purchasing power, empowering you to realise your dreams with ease and certainty.</p>
+                                    <p>The AI-empowered dedicated blockchain system encourages financial growth. Through community ownership and smart asset management, it consistently supports purchasing power, empowering you to realise your dreams with ease and certainty.</p>
                                 </div>
                             </div>
                         </div>
@@ -618,7 +618,7 @@
                                     <div class="card-title"><strong>consensus</strong></div>
                                 </div>
                                 <div class="fade-in-on-scroll" style="opacity: 1;">
-                                    <p>This system is owned by the community because of the Delegate Proof of Stake consensus, which enables a voting system.</p>
+                                    <p>This system is owned by the community because of the Delegate Proof of Stake consensus, which enables democracy by a voting system.</p>
                                 </div>
                             </div>
                             <div class="trusted-item last">
