--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <link href="https://fonts.googleapis.com/" rel="preconnect" />
         <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="anonymous" />
         <script src="assets/webfont.js" type="text/javascript"></script>
-        <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+        <script src="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.js"></script>
         <link rel="stylesheet" href="assets/css.css" media="all" />
         <script type="text/javascript">
             WebFont.load({ google: { families: ["Manrope:200,300,regular,500,600,700,800", "Inter:200,300,regular,500,600"] } });
@@ -677,6 +677,8 @@
                     <div class="download-badge-holder">
                         <div class="from-wra-er">
                             <div class="form-block w-form">
+                              <div id="getWaitlistContainer" data-waitlist_id="8096"></div>
+                              <!--
                                 <form id="email-form" name="email-form" data-name="Email Form" method="get" aria-label="Email Form" style="display: block;">
                                     <div class="from-holder">
                                         <input type="email" class="text-field-form w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Enter Your Email" id="email-2" required="" value="" />
@@ -684,7 +686,7 @@
                                     </div>
                                 </form>
                                 <div class="success-message w-form-done" tabindex="-1" role="region" aria-label="Email Form success" style="display: none;"><div>Thank you! Your submission has been received!</div></div>
-                                <div class="error-message w-form-fail" tabindex="-1" role="region" aria-label="Email Form failure" style="display: none;"><div>Oops! Something went wrong while submitting the form.</div></div>
+                                <div class="error-message w-form-fail" tabindex="-1" role="region" aria-label="Email Form failure" style="display: none;"><div>Oops! Something went wrong while submitting the form.</div></div> -->
                             </div>
                         </div>
                     </div>
@@ -870,7 +872,7 @@
                                         </div>
                                         <div class="experience-paragraph-holder">
                                             <p style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;" class="black-text">
-                                                Get rewarded proportional to your eposit and transactions.
+                                                Get rewarded proportional to your deposit and transactions.
                                             </p>
                                         </div>
                                     </div>
@@ -990,6 +992,23 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="download-badge-holder">
+                <div class="from-wra-er">
+                    <div class="form-block w-form">
+                      <div id="getWaitlistContainer" data-waitlist_id="8096"></div>
+                        <!-- <form id="email-form" name="email-form" data-name="Email Form" method="get" aria-label="Email Form" style="display: block;">
+                            <div class="from-holder">
+                                <input type="email" class
+                                ="text-field-form w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Enter Your Email" id="email-2" required="" value="" />
+                                <input type="submit" value="Get Early Access" data-wait="Please wait..." class="button from w-button" />
+                            </div>
+                        </form>
+                        <div class="success-message w-form-done" tabindex="-1" role="region" aria-label="Email Form success" style="display: none;"><div>Thank you! Your submission has been received!</div></div>
+                        <div class="error-message w-form-fail" tabindex="-1" role="region" aria-label="Email Form failure" style="display: none;"><div>Oops! Something went wrong while submitting the form.</div></div> -->
                     </div>
                 </div>
             </div>
