--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <link href="https://fonts.googleapis.com/" rel="preconnect" />
         <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="anonymous" />
         <script src="assets/webfont.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.css"/>
         <script src="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.js"></script>
         <link rel="stylesheet" href="assets/css.css" media="all" />
         <script type="text/javascript">
@@ -101,7 +102,7 @@
                                 <a href="https://demo.ecosis.network/#guide" class="cricle-active-holder w-inline-block keychainify-checked"></a>
                             </div>
                         </div>
-                        <div class="nav-button-holder"><a href="https://demo.ecosis.network/#earlyAccess" class="button navbar-button w-button keychainify-checked">Get early access</a></div>
+                        <div class="nav-button-holder"><a href="https://getwaitlist.com/waitlist/8096" target="_blank" class="button navbar-button w-button keychainify-checked">Get early access</a></div>
                     </nav>
                     <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false">
                         <div class="center-box"><img src="assets/63aee5793ca698aa19fe7f75_menu.svg" loading="lazy" alt="" /></div>
@@ -677,7 +678,7 @@
                     <div class="download-badge-holder">
                         <div class="from-wra-er">
                             <div class="form-block w-form">
-                              <div id="getWaitlistContainer" data-waitlist_id="8096"></div>
+                              <div class="nav-button-holder"><a href="https://getwaitlist.com/waitlist/8096" target="_blank" class="button navbar-button w-button keychainify-checked">Get early access</a></div>
                               <!--
                                 <form id="email-form" name="email-form" data-name="Email Form" method="get" aria-label="Email Form" style="display: block;">
                                     <div class="from-holder">
@@ -999,7 +1000,7 @@
             <div class="download-badge-holder">
                 <div class="from-wra-er">
                     <div class="form-block w-form">
-                      <div id="getWaitlistContainer" data-waitlist_id="8096"></div>
+                      <div class="nav-button-holder"><a href="https://getwaitlist.com/waitlist/8096" target="_blank" class="button navbar-button w-button keychainify-checked">Get early access</a></div>
                         <!-- <form id="email-form" name="email-form" data-name="Email Form" method="get" aria-label="Email Form" style="display: block;">
                             <div class="from-holder">
                                 <input type="email" class
